Deleted the unnecessary class Top10Listener. Changed the style of the table and the format for displaying information about loading into it.

--- a/Torrent/Torrent/App.xaml
+++ b/Torrent/Torrent/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:Torrent"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="styles/DataGrid.xaml"/>
     </Application.Resources>
 </Application>
