--- a/Torrent/Torrent/MainWindow.xaml
+++ b/Torrent/Torrent/MainWindow.xaml
@@ -24,24 +24,19 @@
             <MenuItem Header="Настройки" ></MenuItem>
             <MenuItem Header="Справка" ></MenuItem>
         </Menu>
-        <DataGrid x:Name="TorrentsGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" Margin="0,69,0,177" Width="802" HorizontalAlignment="Center">
+        <DataGrid x:Name="TorrentsDataGrid" ItemsSource="{Binding}" AutoGenerateColumns="False" Margin="0,69,0,177" Width="880" HorizontalAlignment="Center">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="№" Binding="{Binding Number}" Width="35" />
-                <DataGridTextColumn Header="Состояние" Binding="{Binding State}" Width="80" />
+                <DataGridTextColumn Header="Состояние" Binding="{Binding State}" Width="150" />
                 <DataGridTextColumn Header="Название" Binding="{Binding Name}" Width="150" />
-                <DataGridTextColumn Header="Прогресс" Binding="{Binding Progress}"  Width="200" />
-                <DataGridTextColumn Header="Скор. загрузки" Binding="{Binding DownloadSpeed}" Width="100" />
-                <DataGridTextColumn Header="Скор. скачиван." Binding="{Binding UploadSpeed}" Width="100" />
-                <DataGridTextColumn Header="Загружено" Binding="{Binding DownloadedBytes}" Width="80" />
-                <DataGridTextColumn Header="Отдано" Binding="{Binding UploadetBytes}" Width="80" />
+                <DataGridTextColumn Header="Прогресс" Binding="{Binding Progress}"  Width="150" />
+                <DataGridTextColumn Header="Скорость загр." Binding="{Binding DownloadSpeed}" Width="100" />
+                <DataGridTextColumn Header="Скорость отд." Binding="{Binding UploadSpeed}" Width="100" />
+                <DataGridTextColumn Header="Загружено" Binding="{Binding DownloadedData}" Width="100" />
+                <DataGridTextColumn Header="Отдано" Binding="{Binding UploadedData}" Width="100" />
             </DataGrid.Columns>
         </DataGrid>
         <StackPanel x:Name="ButtonsStackPanel" Margin="0,368,0,0" Orientation="Horizontal" Background="#7FB8B8B8" Height="66">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Margin" Value="5,5,5,5"/>
-                </Style>
-            </StackPanel.Resources>
             <Button x:Name="AddTorrentButton" VerticalAlignment="Top" Foreground="Black" BorderBrush="Black" OpacityMask="#FC000000" Height="32" Width="305" Click="AddTorrentButton_Click">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0,1">
@@ -54,8 +49,7 @@
                     <TextBlock HorizontalAlignment="Center" Text=" Добавить торрент " VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
-            <Button x:Name="StopDownloadButton" VerticalAlignment="Top" Foreground="Black" BorderBrush="Black" Height="32" Width="305
-                    ">
+            <Button x:Name="StopDownloadButton" VerticalAlignment="Top" Foreground="Black" BorderBrush="Black" Height="32" Width="305">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0,1">
                         <GradientStop Color="#7FFF0000" Offset="0"/>
@@ -67,8 +61,7 @@
                     <TextBlock HorizontalAlignment="Center" Text=" Остановить загрузку " VerticalAlignment="Center" />
                 </StackPanel>
             </Button>
-            <Button x:Name="ResumeDownloadButton" VerticalAlignment="Top" Foreground="Black" BorderBrush="Black" Height="32" Width="305
-                    " Click="ResumeDownloadButton_Click">
+            <Button x:Name="ResumeDownloadButton" VerticalAlignment="Top" Foreground="Black" BorderBrush="Black" Height="32" Width="305" Click="ResumeDownloadButton_Click">
                 <Button.Background>
                     <LinearGradientBrush EndPoint="0,1">
                         <GradientStop Color="#7F1EF03B"/>
@@ -81,7 +74,7 @@
                 </StackPanel>
             </Button>
         </StackPanel>
-        <Label Content="Список торрентов:" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Top" Width="800" FontSize="18" Background="#7FB8B8B8"/>
-        <TextBox x:Name="LogTextBox" HorizontalAlignment="Center" IsReadOnly="True" Margin="0,262,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="801" Height="101"/>
+        <Label Content="Список торрентов:" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Top" Width="880" FontSize="18" Background="#7FB8B8B8"/>
+        <TextBox x:Name="CommonInfoTextBox" HorizontalAlignment="Center" IsReadOnly="True" Margin="0,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="880" Height="101" Background="#7FB8B8B8"/>
     </Grid>
 </Window>
