--- a/Torrent/Torrent/styles/Buttons.xaml
+++ b/Torrent/Torrent/styles/Buttons.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Torrent.styles">
+                    xmlns:local="clr-namespace:Torrent">
 
     <Style x:Key="FirstButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Margin" Value="5,5,5,5"/>
